services/service-a/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    external-dns.alpha.kubernetes.io/hostname: service-a.quik.com
spec:
  rules:
    - host: service-a.quik.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: java-app-service
                port:
                  number: 80
    - tls:
        - hosts:
            - service-a.quik.com
          secretName: quik-tls
